--- a/style/style.css
+++ b/style/style.css
@@ -103,3 +103,9 @@ body {
   .submit:hover {
     background-color:  #ccac00;
   }
+
+  .error-message {
+    color: red;
+    margin-bottom: 10px;
+    text-align:center;
+  }
