--- a/style/style.css
+++ b/style/style.css
@@ -6,7 +6,7 @@ body {
   }
 
   header {
-    background-color: #FFD700;
+    background-color: rgb(248, 244, 0);
     color: black;
     padding: 20px;
     display: flex;
@@ -19,7 +19,6 @@ body {
   }
 
   .logo img {
-    width: 40px;
     height: 40px;
     vertical-align: middle;
   }
@@ -37,7 +36,7 @@ body {
     color: black;
     text-decoration: none;
     margin-left: 10px;
-    border-bottom: #FFD700 solid 1px;
+    border-bottom: rgb(248, 244, 0) solid 1px;
     transition: .3s;
   }
   a.logout{
@@ -109,3 +108,88 @@ body {
     margin-bottom: 10px;
     text-align:center;
   }
+
+  /* WELCOME PANEL */
+
+  .main-content{
+    width: 100%;
+    padding: 50px 5px 5px 30px;
+    background-color: aliceblue;
+
+}
+.panel-content{
+    width: 100%;
+    text-align: left;
+    background-color: white;
+    border: 1px solid black;
+}
+.panel-header{
+    border-bottom: 1px solid black;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.panel-title{
+    display: block;
+    padding: 30px;
+    font-size: 35px;
+    font-weight: normal;
+    color: rgb(38, 38, 38);
+}
+.panel-date{
+    padding: 10px;
+    margin: 10px;
+    font-size: 25px;
+}
+.panel-bottom{
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
+
+.panel-element-wrapper{
+    display: block;
+    transition: 0.5s;
+    width: 300px;
+    height: 300px;
+    line-height: 250px;
+    font-size: 60px;
+    margin: 25px;
+    
+    background: linear-gradient(135deg, var(--c1, rgb(248, 244, 0)) 45%, var(--c2, rgb(241, 255, 113)) 45%, var(--c1, rgba(248, 244, 0))) var(--x, 0)/ 200%;
+    
+    text-decoration: none;
+
+}
+.panel-element-wrapper:hover{
+     --x: 30%;
+}
+
+.panel-element{
+    text-align: center;
+    background-size: 30%;
+    background-repeat: no-repeat;
+    background-position-x: 12%;
+    background-position-y: 12%;
+    transition: .5s;
+}
+.panel-element-a{
+    background-image: url(../img/eye.png);
+    background-size: 35%;
+}
+.panel-element-b{
+    background-image: url(../img/add.png);
+    background-size: 35%;
+}
+.panel-element:hover{
+    background-size: 40%;
+}
+.panel-element-b:hover{
+    background-size: 45%;
+}
+.panel-text{
+    
+    font-size: 30px;
+    color:black
+}
