--- a/style/style.css
+++ b/style/style.css
@@ -42,8 +42,9 @@ body {
   a.logout{
     border: none;
     background-color: black;
-    color: #FFD700;
-    padding: 5px;
+    border: black solid 1px;
+    color: white;
+    padding: 7px;
     border-radius: 5px;
   }
   .nav-links a:hover{
@@ -51,9 +52,8 @@ body {
     color: dimgray;
   }
   a.logout:hover{
-    border:none;
-    background-color: dimgray;
-    color:#FFD700
+    background-color: white;
+    color:black
 
   }
 
@@ -111,20 +111,17 @@ body {
 
   /* WELCOME PANEL */
 
-  .main-content{
-    width: 100%;
-    padding: 50px 5px 5px 30px;
-    background-color: aliceblue;
 
-}
 .panel-content{
-    width: 100%;
-    text-align: left;
-    background-color: white;
-    border: 1px solid black;
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 5px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  margin-top: 50px;
 }
 .panel-header{
-    border-bottom: 1px solid black;
     display: flex;
     justify-content: space-between;
     align-items: center;
